--- a/site/index.html
+++ b/site/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <center><h1>Curso Front-End</h1></center>
-    <center><h2>Estamos em Contrução</h2></center>
+    <center><h2>Estamos em Construção</h2></center>
 </body>
 </html>
